--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/github",
-    "@semantic-release/npm",
-    {
+    "@semantic-release/npm", {
       "npmPublish": false
     }
   ],
