--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,13 +19,14 @@ jobs:
           node-version: 'lts/*'
       - name: Show versions
         run: |
-          printf "\033[0;32m +++ Node Version:\n" 
+          printf "\033[0;32m +++ Node Version:" 
           node --version
           
-          echo -e "\n\n"
-
-          printf "\033[0;32m +++ NPM Version:\n" 
+          printf "\033[0;32m +++ NPM Version:" 
           npm --version
+
+          printf "\033[0;32m +++ NPM Whoami:" 
+          npm whoami --registry https://registry.npmjs.org/.
       - name: Install dependencies
         run: npm ci
       - name: Release
