--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
+  "tagFormat": "${version}",
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
