--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -6,7 +6,7 @@ tagFormat: '${version}'
 
 # Global plugin options (will be passed to all plugins)
 preset: 'conventionalcommits'
-githubUrl: 'http://github.com/'
+githubUrl: 'https://api.github.com/'
 # slackWebhook: 'https://slack.xxx.com/hooks/q3dtkec6yjyg9x6616o3atgkkr' # if you need slack notifies
 
 # Responsible for verifying conditions necessary to proceed with the release:
