--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,8 +1,8 @@
-name: 'Terraform'
+name: "Terraform"
 
 on:
   push:
-    branches: [ "main", "release-*", "hotfix-*", "develop" ]
+    branches: ["main", "release-*", "hotfix-*", "develop"]
   pull_request:
 
 permissions:
@@ -10,26 +10,26 @@ permissions:
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: "Terraform"
     runs-on: ubuntu-latest
-    environment: production
+    environment: Default
 
     defaults:
       run:
         shell: bash
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
 
-    - name: Terraform Init
-      run: terraform init
+      - name: Terraform Init
+        run: terraform init
 
-    - name: Terraform Format
-      run: terraform fmt -check
-      
-    - name: Terraform Format
-      run: terraform fmt -check      
+      - name: Terraform Format
+        run: terraform fmt -check
+
+      - name: Terraform Format
+        run: terraform fmt -check
