--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,43 @@
 ---
-name: Release
+name: Publish Terraform Module
 on:
   push:
     branches:
       - main
+      - "develop"
+      - "release-*"
+      - "hotfix-*"
 
 jobs:
+  terraform:
+    name: "Terraform Validate"
+    runs-on: ubuntu-latest
+    environment: Default
+
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Format
+        run: terraform fmt -check
+
+      - name: Terraform Format
+        run: terraform fmt -check
+
   release:
     name: Release
     runs-on: ubuntu-latest
+    needs: [terraform]
     environment: Default
 
     steps:
