--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,59 +1,16 @@
----
-name: Publish Terraform Module
+name: "Deploy Terraform Module"
+
 on:
   push:
     branches:
       - main
-      - "develop"
-      - "release-*"
-      - "hotfix-*"
+      - develop  
 
 jobs:
-  terraform:
-    name: "Terraform Validate"
-    runs-on: ubuntu-latest
-    environment: Default
-
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Format
-        run: terraform fmt -check
-
-      - name: Terraform Format
-        run: terraform fmt -check
-
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    needs: [terraform]
-    environment: Default
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "lts/hydrogen"
-      - name: Install dependencies
-        run: npm ci
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-
-        run: npx semantic-release
+  deploy-terraform:
+    uses: eduzuchetti/ez-devops-gh-actions/.github/workflows/pipeline-terraform-module.yml@main
+    secrets: inherit
+    with:
+      sonar-scan: true
+      terraform-version: 1.13.5
+      unique-environment: true
